
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".profile">

    <RelativeLayout android:id="@+id/content_container"
        android:layout_width="673dp"
        android:layout_height="wrap_content" >



        <RelativeLayout android:id="@+id/page_frame_43973_ek1"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View   android:id="@+id/_bg__frame_43973_ek2"
                android:background="@drawable/_bg__frame_43973_ek2_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="393dp"
                android:layout_height="786dp" />

            <View   android:id="@+id/ellipse_161"
                android:background="@drawable/hinhtrontron"
                android:alpha="0.56000000238419"
                android:layout_marginStart="-74dp"
                android:layout_marginTop="-173dp"
                android:layout_width="600dp"
                android:layout_height="623dp" />

            <ImageView android:id="@+id/edit_1"
                android:src="@drawable/edit_1"
                android:contentDescription="edit_1"
                android:layout_marginStart="166dp"
                android:layout_marginTop="91dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <ImageButton
                android:id="@+id/back"
                android:src="@drawable/quaylai"
                android:contentDescription="edit_1"
                android:layout_marginStart="26dp"
                android:layout_marginTop="31dp"
                android:layout_width="15dp"
                android:layout_height="25dp"
                android:background="@null"/>

            <TextView android:id="@+id/titleUsername"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/_bg__frame_43973_ek2_color"
                android:layout_marginLeft="112dp"
                android:layout_marginTop="217dp"
                android:layout_width="216dp"
                android:layout_height="35dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_string"
                />
            <TextView android:id="@+id/titleName"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/_bg__frame_43973_ek2_color"
                android:layout_marginLeft="112dp"
                android:layout_marginTop="197dp"
                android:layout_width="216dp"
                android:layout_height="35dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_string"
                />
            <View   android:id="@+id/rectangle_39946"
                android:background="@drawable/rectangle_39946_shape"
                android:layout_marginStart="50dp"
                android:layout_marginTop="261dp"
                android:layout_width="341dp"
                android:layout_height="367dp" />



            <TextView android:id="@+id/t_n"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"

                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="538dp"
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:text="Mật khẩu"
                />

            <TextView android:id="@+id/profilePassword"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="188dp"
                android:layout_marginTop="539dp"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_ek1_string"
                />

            <View   android:id="@+id/line_16"
                android:background="@drawable/line_16_shape"
                android:layout_marginStart="58dp"
                android:layout_marginTop="438dp"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:alpha="0.1"/>

            <TextView android:id="@+id/t_n_ek1"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="397dp"
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:text="@string/t_n_ek1_string"
                />

            <TextView android:id="@+id/profileEmail"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="186dp"
                android:layout_marginTop="397dp"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_ek2_string"
                />

            <View   android:id="@+id/line_15"
                android:background="@drawable/line_15_shape"
                android:layout_marginStart="66dp"
                android:layout_marginTop="367dp"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:alpha="0.1"/>

            <TextView android:id="@+id/t_n_ek2"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="323dp"
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:text="@string/t_n_ek2_string"
                />

            <TextView android:id="@+id/profileName"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"

                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="186dp"
                android:layout_marginTop="324dp"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_ek3_string"
                />

            <View   android:id="@+id/line_17"
                android:background="@drawable/line_17_shape"
                android:layout_marginStart="66dp"
                android:layout_marginTop="508dp"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:alpha="0.1"/>

            <TextView android:id="@+id/t_n_ek3"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"

                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="461dp"
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:text="Tên"
                />

            <TextView android:id="@+id/profileUsername"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:textSize="16sp"
                android:textColor="@color/t_n_color"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="463dp"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:text="@string/nguy_n_tr_n_duy_t_n_ek4_string"
                />

            <ImageButton
                android:id="@+id/editButton"
                android:background="@drawable/rectangle_39947_shape"
                android:alpha="0.72000002861023"
                android:layout_marginStart="48dp"
                android:layout_marginTop="672dp"
                android:layout_width="341dp"
                android:layout_height="57dp"
                />

            <TextView android:id="@+id/ch_nh_s_a_th_ng_tin"
                android:fontFamily="Poppins"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/_bg__frame_43973_ek2_color"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="665dp"
                android:layout_width="338dp"
                android:layout_height="67dp"
                android:text="@string/ch_nh_s_a_th_ng_tin_string"
                />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
